[package]
name = "sbo3l-keeperhub-adapter"
version = "1.2.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/B2JK-Industry/SBO3L-ethglobal-openagents-2026"
homepage.workspace = true
documentation.workspace = true
description = "SBO3L adapter for KeeperHub workflow execution: signed PolicyReceipt + IP-1 sbo3l_* envelope, GuardedExecutor trait, mock + live constructors. See repo for the IP-1..IP-5 catalogue."
keywords = ["sbo3l", "keeperhub", "policy", "agent", "execution"]
categories = ["api-bindings", "cryptography"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
# SBO3L core hosts the IP-4 trait (`GuardedExecutor`) + receipt + envelope
# types. This is the *only* workspace-internal dependency, by design — the
# whole point of this crate is "depend on sbo3l-keeperhub-adapter" without
# pulling the rest of the SBO3L workspace.
sbo3l-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
hex = { workspace = true }

# A8: real KeeperHub HTTP submission for `KeeperHubExecutor::live()`.
# `blocking` keeps this off the async runtime since the executor's
# `GuardedExecutor::execute` signature is sync; `rustls-tls` avoids
# linking system OpenSSL on every consumer's build. `default-features`
# off because we don't need cookies / gzip / multipart.
#
# Crate-local only — NOT promoted to workspace deps (per A8 brief), so
# crates that don't depend on `sbo3l-keeperhub-adapter` don't pull
# reqwest into their compile graph.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
chrono = { workspace = true }
# A8: offline mock HTTP server so tests don't hit the network. Pinned
# loosely; mockito's API stabilised at 1.x. Crate-local dev-dep only.
mockito = "1"
