[package]
name = "sbo3l-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "SBO3L policy engine: YAML/JSON policy parsing + rule evaluation + persistent budget tracking."
keywords = ["sbo3l", "policy", "agent", "rules", "yaml"]
categories = ["config", "parser-implementations"]

[dependencies]
sbo3l-core = { workspace = true }
sbo3l-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json_canonicalizer = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
