[package]
name = "sbo3l-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SBO3L daemon: HTTP API for payment-request decisions."

[lib]
name = "sbo3l_server"
path = "src/lib.rs"

[[bin]]
name = "sbo3l-server"
path = "src/main.rs"

[dependencies]
sbo3l-core = { workspace = true }
sbo3l-policy = { workspace = true }
sbo3l-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
hex = { workspace = true }
# F-1 auth middleware: bearer (bcrypt) + JWT (Ed25519). Pinned majors.
jsonwebtoken = "9"
bcrypt = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = "0.22"
