[package]
name = "sbo3l-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "SBO3L HTTP daemon: POST /v1/payment-requests pipeline (auth, idempotency, policy, budget, audit, signed receipt)."
keywords = ["sbo3l", "agent", "server", "policy", "http"]
categories = ["web-programming::http-server", "command-line-utilities"]

[lib]
name = "sbo3l_server"
path = "src/lib.rs"

[[bin]]
name = "sbo3l-server"
path = "src/main.rs"

[dependencies]
sbo3l-core = { workspace = true }
sbo3l-policy = { workspace = true }
sbo3l-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
# T-3-5 backend: futures combinators for the WebSocket split read/write
# path. Pulled in unconditionally since reqwest already transitively
# depends on futures-util; gating saves no bytes.
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
hex = { workspace = true }
# Webhook callback verifier (P5 / `executor_callback.rs`) — pulls
# `VerifyingKey::from_bytes` to construct the per-sponsor verifying
# key from the env-configured hex pubkey.
ed25519-dalek = { workspace = true }
# F-1 auth middleware: bearer (bcrypt) + JWT (Ed25519). Pinned majors.
jsonwebtoken = "9"
bcrypt = "0.15"

# R14 P4: Raft cluster scaffold (EXPERIMENTAL). Pulled in only when
# `--features cluster` is enabled — the no-feature build (and the
# default `cargo build -p sbo3l-server`) does not link openraft.
# `serde` + `serde_json` features wire openraft's own serde wiring;
# we bincode-encode the application log entries ourselves over plain
# `serde::{Serialize, Deserialize}` derives.
openraft = { version = "0.9", default-features = false, features = ["serde", "serde_json", "single-term-leader", "storage-v2"], optional = true }
bincode = { version = "1.3", optional = true }
reqwest = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = "0.22"
# T-3-5 integration test: real WebSocket client against the in-process
# server bound to an ephemeral port.
tokio-tungstenite = "0.21"
reqwest = { workspace = true }

# F-5: passthrough features for sbo3l-core's KMS backends so a
# `cargo test -p sbo3l-server --features aws_kms` route compiles the
# AWS backend in the consumer crate's test_signers.rs without forcing
# every workspace test to pull a multi-MB SDK dependency tree.
[features]
default = []
aws_kms = ["sbo3l-core/aws_kms"]
gcp_kms = ["sbo3l-core/gcp_kms"]
phala_tee = ["sbo3l-core/phala_tee"]
eth_signer = ["sbo3l-core/eth_signer"]
# T-3-5: mounts `GET /v1/events` (WebSocket → trust-dns viz). OFF by
# default so existing daemon runs aren't disturbed; opt in with
# `--features ws_events` at build time.
ws_events = []
# R14 P4: 3-node Raft cluster scaffold (EXPERIMENTAL). When ON, mounts
# the `/v1/admin/cluster/*` surface and links openraft. OFF by default
# — the audit chain remains single-node unless explicitly opted in.
# See `docs/cluster-mode.md` for the EXPERIMENTAL caveats.
cluster = ["dep:openraft", "dep:bincode", "dep:reqwest", "dep:async-trait"]
