[package]
name = "sbo3l-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "SBO3L HTTP daemon: POST /v1/payment-requests pipeline (auth, idempotency, policy, budget, audit, signed receipt)."
keywords = ["sbo3l", "agent", "server", "policy", "http"]
categories = ["web-programming::http-server", "command-line-utilities"]

[lib]
name = "sbo3l_server"
path = "src/lib.rs"

[[bin]]
name = "sbo3l-server"
path = "src/main.rs"

# R14 P1: optional gRPC binary that runs the existing axum HTTP router
# AND a tonic-based gRPC server side-by-side on different ports. Lives
# behind the `grpc` feature so deployments that don't want gRPC don't
# pay the prost / tonic compile cost. `cargo build -p sbo3l-server`
# (no features) keeps emitting only the HTTP `sbo3l-server` binary.
[[bin]]
name = "sbo3l-server-grpc"
path = "src/bin/sbo3l_server_grpc.rs"
required-features = ["grpc"]

[dependencies]
sbo3l-core = { workspace = true }
sbo3l-policy = { workspace = true }
sbo3l-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
# R14 P1: gRPC stack. `tonic` carries the runtime; `prost` is the
# generated-code dependency for proto messages. Both are gated behind
# the `grpc` feature so the default HTTP-only build stays lean.
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
async-stream = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
# T-3-5 backend: futures combinators for the WebSocket split read/write
# path. Pulled in unconditionally since reqwest already transitively
# depends on futures-util; gating saves no bytes.
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
hex = { workspace = true }
# Webhook callback verifier (P5 / `executor_callback.rs`) — pulls
# `VerifyingKey::from_bytes` to construct the per-sponsor verifying
# key from the env-configured hex pubkey.
ed25519-dalek = { workspace = true }
# F-1 auth middleware: bearer (bcrypt) + JWT (Ed25519). Pinned majors.
jsonwebtoken = "9"
bcrypt = "0.15"

# R14 P4: Raft cluster scaffold (EXPERIMENTAL). Pulled in only when
# `--features cluster` is enabled — the no-feature build (and the
# default `cargo build -p sbo3l-server`) does not link openraft.
# `serde` + `serde_json` features wire openraft's own serde wiring;
# we bincode-encode the application log entries ourselves over plain
# `serde::{Serialize, Deserialize}` derives.
openraft = { version = "0.9", default-features = false, features = ["serde", "serde_json", "single-term-leader", "storage-v2"], optional = true }
bincode = { version = "1.3", optional = true }
reqwest = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }
# R14 P5: OpenTelemetry tracing layer. Off by default; enable with
# `--features otel`. The four `opentelemetry*` crates MUST stay version-
# pinned together (the major-version churn around 0.21→0.31 broke the
# inter-crate API on every minor bump). `tracing-opentelemetry` 0.32
# pairs with the `opentelemetry*` 0.31 series. See `docs/observability.md`
# for the runbook.
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"], optional = true }
opentelemetry-stdout = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tower = { version = "0.5", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = "0.22"
# T-3-5 integration test: real WebSocket client against the in-process
# server bound to an ephemeral port.
tokio-tungstenite = "0.21"
reqwest = { workspace = true, features = ["blocking"] }
# R14 P5 OTEL stdout integration test (`tests/otel_stdout.rs`):
# uses `libc::kill(pid, SIGTERM)` to trigger the binary's graceful-
# shutdown path so the OTEL batch span processor flushes deterministically.
# Unix-only; Windows path falls back to `child.kill()` (ungraceful, but
# the integration test is gated on `cfg(feature = "otel")` and CI runs
# on Linux).
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

# R14 P1: build-time codegen for `proto/sbo3l.proto`. Runs only when
# the `grpc` feature is enabled (see [features] below) — `tonic-build`
# is keyed on `cfg(feature = "grpc")` inside `build.rs`. The vendored
# protoc binary lets the build work on hosts without `protoc` on PATH,
# which matches our CI + worktree pattern (no pre-provisioned tools).
[build-dependencies]
tonic-build = { version = "0.12", optional = true }
protoc-bin-vendored = { version = "3", optional = true }

# F-5: passthrough features for sbo3l-core's KMS backends so a
# `cargo test -p sbo3l-server --features aws_kms` route compiles the
# AWS backend in the consumer crate's test_signers.rs without forcing
# every workspace test to pull a multi-MB SDK dependency tree.
[features]
default = []
aws_kms = ["sbo3l-core/aws_kms"]
gcp_kms = ["sbo3l-core/gcp_kms"]
phala_tee = ["sbo3l-core/phala_tee"]
eth_signer = ["sbo3l-core/eth_signer"]
# T-3-5: mounts `GET /v1/events` (WebSocket → trust-dns viz). OFF by
# default so existing daemon runs aren't disturbed; opt in with
# `--features ws_events` at build time.
ws_events = []
# R14 P4: 3-node Raft cluster scaffold (EXPERIMENTAL). When ON, mounts
# the `/v1/admin/cluster/*` surface and links openraft. OFF by default
# — the audit chain remains single-node unless explicitly opted in.
# See `docs/cluster-mode.md` for the EXPERIMENTAL caveats.
cluster = ["dep:openraft", "dep:bincode", "dep:reqwest", "dep:async-trait"]
# R14 P1: opt-in gRPC surface. Activates the tonic + prost runtime
# crates AND the build-script codegen path (`tonic-build` +
# `protoc-bin-vendored`). The `sbo3l-server-grpc` binary
# (`required-features = ["grpc"]`) only builds when this is on.
grpc = [
    "dep:tonic",
    "dep:prost",
    "dep:async-stream",
    "dep:tokio-stream",
    "dep:tonic-build",
    "dep:protoc-bin-vendored",
# R14 P5: OpenTelemetry tracing emitter. OFF by default — the
# no-features build must not pull a single OTEL transitive dep. Enable
# with `--features otel`. Runtime exporter selection via
# `SBO3L_OTEL_EXPORTER` env (none|stdout|otlp). See
# `docs/observability.md` for the full env-var matrix.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-stdout",
    "dep:tracing-opentelemetry",
    "dep:tower",
]
