[package]
name = "sbo3l-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "SBO3L storage: SQLite persistence + hash-chained audit log."
keywords = ["sbo3l", "audit", "sqlite", "policy", "storage"]
categories = ["database", "cryptography"]

[dependencies]
sbo3l-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
ulid = { workspace = true }
# F-2: USD-string → cents conversion lives at the policy/storage boundary.
rust_decimal = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
