[package]
name = "sbo3l-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "SBO3L storage: SQLite persistence + hash-chained audit log."
keywords = ["sbo3l", "audit", "sqlite", "policy", "storage"]
categories = ["database", "cryptography"]

[dependencies]
sbo3l-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
ulid = { workspace = true }
# F-2: USD-string → cents conversion lives at the policy/storage boundary.
rust_decimal = { workspace = true }
# Remote-backend uploads (0G Storage testnet). Blocking client keeps the
# `sbo3l audit export` CLI path single-threaded; no tokio runtime needed
# from the CLI side. `rustls-tls` matches the workspace-wide reqwest config.
reqwest = { workspace = true, features = ["blocking"] }

# Postgres backend (production deployment). Off by default so the
# default `cargo build -p sbo3l-storage` stays sqlite-only and fast.
# Enable with `--features postgres`. CI gates the feature behind a
# matrix axis (postgres job pulls a postgres:16 service container).
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros", "json", "uuid", "chrono"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], optional = true }

[features]
default = []
postgres = ["dep:sqlx", "dep:uuid", "dep:tokio"]

[dev-dependencies]
tempfile = { workspace = true }
# Remote-backend unit tests stub the 0G Storage indexer HTTP API in-process
# so retry / timeout / malformed-response invariants don't depend on the
# real (flaky) Galileo testnet. `httpmock` ships its own background server.
httpmock = "0.7"
