[package]
name = "research-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ETHGlobal Open Agents demo harness for SBO3L. Exercises legit-x402 and prompt-injection scenarios deterministically against the in-memory daemon."

[[bin]]
name = "research-agent"
path = "src/main.rs"

[dependencies]
sbo3l-core = { workspace = true }
sbo3l-policy = { workspace = true }
sbo3l-storage = { workspace = true }
sbo3l-server = { path = "../../crates/sbo3l-server" }
sbo3l-identity = { workspace = true }
sbo3l-execution = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
