[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sbo3l-example-langchain-py-research-agent"
version = "1.0.0"
description = "End-to-end LangChain Python research agent that gates every payment through SBO3L's policy boundary. Reasons across 2 tools (data_fetch + sbo3l_pay) and executes through KeeperHub workflow m4t4cnpmhv8qquce3bv3c."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sbo3l-sdk>=1.0.0,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.3,<1",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.2,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-httpx>=0.30,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["sbo3l_langchain_demo"]

[tool.pytest.ini_options]
testpaths = ["."]
filterwarnings = ["error"]
