[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sbo3l-example-llamaindex-research-agent"
version = "1.0.0"
description = "End-to-end LlamaIndex research agent demo using sbo3l-llamaindex FunctionTool. Routes through KH workflow m4t4cnpmhv8qquce3bv3c."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sbo3l-sdk>=1.0.0,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
llamaindex = [
    "llama-index-core>=0.10,<1",
    "llama-index-llms-openai>=0.2,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-httpx>=0.30,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["sbo3l_llamaindex_demo"]

[tool.pytest.ini_options]
testpaths = ["."]
filterwarnings = ["error"]
